--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-boilerplate",
+  "name": "pure-hair-website",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,39 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.0",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/pwa": "^3.0.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/style-resources": "^1.0.0",
-    "nuxt": "^2.14.0",
-    "simple-icons": "^3.5.0",
-    "swiper": "^6.1.2"
+    "npm": "^6.14.8",
+    "nuxt": "^2.14.4",
+    "simple-icons": "^3.6.1",
+    "swiper": "^6.1.2",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3"
-  }
+  },
+  "description": "### To start dev server locally:",
+  "main": "nuxt.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nickthegit/pure-hair-website.git"
+  },
+  "keywords": [
+    "pure",
+    "hair",
+    "sherborne"
+  ],
+  "author": "nickthegit",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nickthegit/pure-hair-website/issues"
+  },
+  "homepage": "https://github.com/nickthegit/pure-hair-website#readme"
 }
