--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nuxt": "^2.14.4",
     "simple-icons": "^3.6.1",
     "swiper": "^6.1.2",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-mailchimp-subscribe": "^1.1.0"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
