--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/device": "^1.2.7",
     "@nuxtjs/pwa": "^3.0.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "gsap": "file:gsap-bonus.tgz",
     "npm": "^6.14.8",
     "nuxt": "^2.14.4",
+    "pixi.js": "^5.3.3",
     "simple-icons": "^3.6.1",
     "swiper": "^6.1.2",
     "vue": "^2.6.12",
-    "vue-mailchimp-subscribe": "^1.1.0"
+    "vue-mailchimp-subscribe": "^1.1.0",
+    "vue-types": "^2.0.1"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
