--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "gsap": "file:gsap-bonus.tgz",
+    "imagesloaded": "^4.1.4",
     "npm": "^6.14.8",
     "nuxt": "^2.14.12",
     "simple-icons": "^3.6.1",
